HelloUltraviolet/Fixtures/RejectedSource/SourceText/InvalidUTF8/Expected.uv
//! Expected diagnostic metadata for the InvalidUTF8 rejected-source specimen.

expectedDiagnostic("E-SRC-0101", "NoSpan-Decode")
expectedDiagnostic("E-SRC-0101", "diagnostics.SourceLexicalDiagnostics")
